Seat height calculation adjustments & interactions. - Entities sitting on contraptions no longer have incorrect offsets when the contraption is tilted. - Packages are no longer consumed upon opening when in creative mode. - Removed the individual offsets for entities on seats, as vanilla already provides a way to calculate now. - Allowed interaction of spawn eggs and packages on seats to spawn the corresponding entities directly sitting on. - Added a shift-right-click action to dismount entities on seats, with a small knockback effect applied to prevent them from sitting back immediately. - Shulkers can now sit, though is left commented in the `IGNORE_SEAT` tag, in case this is considered not appropriate.
The next commit will probably be making the seat interactions also possible when on contraptions and make them no longer hardcoded in `handlePlayerInteraction`.

There should also be a fix for stacked passengers, as they now behave extremely weird when going through the portals, and presumably when going into unloaded chunks.